# whatsapp-parser

./: .gitignore  main.py  parser.py  process_chat.py  process_llm.py  prompts.json  push_msgs.py  pyproject.toml  sent_jobs.json  setup.py  test_scrape.py  version_check.py
chats/JobInternOpenings/: hashes_JobInternOpenings.txt  history_JobInternOpenings.csv  state_JobInternOpenings.json
